# 123

./: .gitignore  .gitlab-ci.yml  LICENSE  core.py  get_model.sh  gt.txt  hydrus-dd.py  pyproject.toml  readme.md  server.py  setup.cfg  setup.py  tagger.py  tox.ini
danbooru-resnet_custom_v2-p4/: tags.txt
hydrus_dd/: __main__.py  config.py  evaluate.py
model/: tags_v1.txt  tags_v3-20200915.txt  tags_v3.txt  tags_v4.txt
tests/: test_main.py
